--- a/notes/templates/index.html
+++ b/notes/templates/index.html
@@ -4,7 +4,6 @@
         <title>Notes site</title>
     </head>
 
-
     <body>
 		<h1>Notes</h1>
         <form action='logout/' method="POST">
@@ -13,7 +12,7 @@
         </form>
         <ul>
 		{% for note in notes %}
-		<li>{{note.note}}</li>
+		<li>{{note.note}} <a href='/details/{{note.id}}'>View</a></li>
 		{% endfor %}
         </ul>
     </body>
