--- a/notes/templates/index.html
+++ b/notes/templates/index.html
@@ -10,6 +10,14 @@
 			{% csrf_token %}
             <input type="submit" value="Logout"/>
         </form>
+        <h2>Add note</h2>
+        <form action='add/' method="POST">
+            {% csrf_token %}
+
+			Note <input type="text" name="note"/><br/>
+            Description <input type="text" name="description"/><br/>
+            <input type="submit" value="Save"/>
+        </form>
         <ul>
 		{% for note in notes %}
 		<li>{{note.note}} <a href='/details/{{note.id}}'>View</a></li>
